# PronounsSkyrim

./: CMakeLists.txt  vcpkg.json
src/: Main.cpp  Papyrus.cpp  Papyrus.h  PronounHooks.h  PronounOverrides.cpp  PronounOverrides.h  PronounProfile.h  Serialization.cpp  Serialization.h
